# meeting-helper-backend

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  Dockerfile.5090  Dockerfile.bak  Dockerfile.rtx5090  HTTPS_SETUP.md  IMPLEMENTATION_SUMMARY.md  Makefile  NOHUP_USAGE.md  README.md  TRANSCRIPT_SEGMENTS_API.md  alembic.ini  docker-compose.https.yml  docker-compose.rtx5090.yml.example  docker-compose.yml.example  pyproject.toml  pyproject.toml.bak  rebuild-docker.sh  run-nohup.sh  setup-https.sh
alembic/: env.py
alembic/versions/: 2025_06_12_0009-3802622c2d03_add_user.py  2025_06_12_0020-fbb27ebe89a0_db_init.py  2025_06_12_0148-1f9163abce03_db_init.py  2025_06_12_0315-cd995c3d6ecb_db_init.py  2025_06_14_2058-c134abd3c20f_add_user_group.py  2025_06_14_2156-8ea88400f5d9_add_is_uncategorized_to_group.py  2025_06_15_0024-a6dc1cc12be4_add_tags_speaks_to_transcriptions.py  2025_06_15_0122-5d813c94d75b_add_summary_transcription_text.py  2025_06_15_0935-4d6575f1afdb_add_settings.py  2025_07_05_1519-594b777dea02_add_speakers_and_transcript_segments.py  2025_08_22_1709-f72f14573915_add_description_to_groups.py  2025_10_11_1118-b711a060b14e_add_group_id_to_transcriptions.py  2025_11_13_1127-44965188c973_add_user_id_to_transcriptions.py  2025_11_17_1138-f8385992dcf7_update_role.py  (+4 more)
env.example/: .env.db.example  .env.example
nginx/: nginx.conf
scripts/: patch_pytorch_compat.py
src/: async_runner.py  config.py  constants.py  database.py  main.py  middleware.py  models.py  schemas.py  task_manager.py  whisperx_diarize.py  whisperx_diarize_async.py
(+39 files in other folders)
