[project]
name = "meeting-helper-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "python-multipart>=0.0.6",
    "pydub>=0.25.1",
    "whisperx==3.3.4",
    "requests>=2.32.3",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.1",
]
